--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .form-container {
-    background-color: #ffff;
+    background-color: #ffffff39;
     padding: 20px;
     border-radius: 5px;
     width: 500px;
