--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
+    font-family: Arial,  sans-serif;
+    background-color: #f4f4f4;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,21 +9,25 @@ body {
 }
 
 .form-container {
-    background-color: #817878;
-    padding: 20px;
-    border-radius: 5px;
-    width: 700px;
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    width: 100%;
     max-width: 600px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     /** height: 500px; */
 }
 
 h1 {
-    text-align: center;;
+    text-align: center;
+    color: #333;
+    margin-bottom: 20px;
+    font-size: 2em;
+    font-weight: bold;
 }
 
 .form-group {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
 label {
