--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,7 +31,9 @@ h1 {
 }
 
 label {
+    display: block;
     margin-bottom: 5px;
+
 }
 
 input[type="text"], input[type="email"], input[type="number"] {
