--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,7 +32,9 @@ h1 {
 
 label {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 8px;
+    font-weight: bold;
+    color: #555
 
 }
 
