--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,6 +43,7 @@ input[type="text"], input[type="email"], input[type="number"] {
     padding: 12px;
     border: 1px solid darkblue;
     border-radius: 5px;
+    box-sizing: border-box;
 }
 
 button {
